--- a/templates/index.html
+++ b/templates/index.html
@@ -1,52 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>MINOR-2</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+</head>
+
+<body>
+    <div class="container" id="mainContainer">
+        <h3 class="text-center"> Bootstrap heading</h3>
+
+        <button class="text-center" id="sCamera">Start Camera</button>
+        <br>
+        <video src="" id="videoStream"></video>
+        <br>
+        <canvas id="canvas" style="display: none;" width=320 height=240></canvas>
+
+    </div>
+
+    <script src="../static/script.js"></script>
+
+</body>
+
+
+</html>
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Image Captioning</title>
     <style>
-        .heading{
+        .heading {
             font-weight: 100;
             font-size: 4em;
             text-shadow: 1px 1px 5px black;
         }
-        img{
+
+        img {
             height: 90%;
             width: 100%;
         }
-        .text{
+
+        .text {
             font-size: 32px;
             font-style: italic;
-        }    
+        }
     </style>
 </head>
+
 <body>
     <div class="container">
-		<div class="jumbotron">
-			<div class="container">
-				<h1 class="heading"> Image Captioning BOT </h1>
-				<p> Upload your image to generate a caption... </p>
-			</div>
-		</div>
+        <div class="jumbotron">
+            <div class="container">
+                <h1 class="heading"> Image Captioning BOT </h1>
+                <p> Upload your image to generate a caption... </p>
+            </div>
+        </div>
         <form class="form-inline" method="POST" action="/" enctype="multipart/form-data">
             <label><b> Image : &nbsp;&nbsp; </b></label>
             <input class="form-control" type="file" name="userimage" placeholder="Upload Image">
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+
         <br>
         <br>
         {% if result %}
-            <div class="row">
-                <div class="col-sm-4">
-                    <img src="{{result['image']}}">
-                </div>
-                <div class="col-sm-8">
-                    <p class="text"> Generated Caption : </p>
-                    <p> <b>{{ result['caption'] }} </b> </p>
-                </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="{{result['image']}}">
             </div>
+            <div class="col-sm-8">
+                <p class="text"> Generated Caption : </p>
+                <p> <b>{{ result['caption'] }} </b> </p>
+            </div>
+        </div>
         {% endif %}
     </div>
 </body>
-</html>
+
+</html> -->
